in Country Page Add  Method

--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<appSettings>
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+	</appSettings>
 	<connectionStrings>
 		<add name="MultiUserAddressBookConnectionString" connectionString="data source=HP-PRO; initial catalog = MultiUserAddressBook; Integrated Security = True"/>
 	</connectionStrings>
