File Upload Complete

--- a/Web.config
+++ b/Web.config
@@ -8,8 +8,10 @@
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 	</appSettings>
 	<connectionStrings>
-		<add name="MultiUserAddressBookConnectionString" connectionString="data source=HP-PRO; initial catalog = MultiUserAddressBook; Integrated Security = True"/>
-	</connectionStrings>
+  <add name="MultiUserAddressBookConnectionString" connectionString="data source=HP-PRO; initial catalog = MultiUserAddressBook; Integrated Security = True" />
+  <add name="ConnectionString" connectionString="Data Source=HP-PRO;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
